--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html {
   width: 300px;
   height: 1000px;
   margin: 50px auto;
-
+  position: relative;
 }
 
 p{
@@ -42,7 +42,11 @@ p{
   background: #ff8ba7;
   color: #33272a;
   border: 5px solid #c3f0ca;
-  
+  position: absolute;
+  /*top: 0px; 
+  left: 0px; will put container in corner of page*/
+  top: 250px;
+  left: 50px;
 }
 
 .fixed {
