--- a/style.css
+++ b/style.css
@@ -63,5 +63,8 @@ p{
   background: #232946;
   color: #b8c1ec;
   border: 5px solid #eebbc3;
-  
+  position: sticky;
+  top: 50px;
+  left: 0px;
+  z-index: 10;
 }
